Dark mode fix for carbon

--- a/src/_includes/components/callout.css
+++ b/src/_includes/components/callout.css
@@ -254,25 +254,3 @@ body > .elv-callout-sticky .elv-callout-label {
 		border-bottom-left-radius: 0;
 	}
 }
-
-#carbonads {
-	display: flex;
-	justify-content: center;
-	margin: -1.5em auto 2em;
-}
-#carbon-responsive a[href].carbon-poweredby {
-	color: hsl(0deg 0% 13.33% / 76%);
-	opacity: 1;
-}
-#carbonads a[href]:after {
-	display: none; /* no external link icons */
-}
-#carbon-responsive .carbon-responsive-wrap {
-	border-radius: .25em;
-}
-@media (min-width: 55em) {
-	#carbonads {
-		margin-right: 0;
-		margin-left: -1rem;
-	}
-}
